<?xml version="1.0" encoding="utf-8"?>
  <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".register"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="316dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/guru1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emil"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/rno"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/guru1"
        android:ems="10"
        android:hint="@string/registor_number"
        android:inputType="number|numberSigned"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nme"
        tools:ignore="Autofill" />

  <Button
      android:id="@+id/sip"
      android:layout_width="180dp"
      android:layout_height="45dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="25dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="80dp"
      android:background="@drawable/button_style"
      android:padding="10dp"
      android:text="@string/sign_up"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.501"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pwd2" />

  <EditText
      android:id="@+id/nme"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="135dp"
      android:layout_marginEnd="8dp"
      android:background="@color/guru1"
      android:ems="10"
      android:hint="@string/name"
      android:inputType="textPersonName"
      android:padding="15dp"
      android:textAlignment="textStart"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="Autofill" />

    <EditText
        android:id="@+id/emil"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/guru1"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rno"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/pwd2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/guru1"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd"
        tools:ignore="Autofill" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="8dp"
      android:text="@string/ald_have"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sip"
      android:background="@color/trans"
      android:textColor="@color/white"
      android:textAllCaps="false"
      android:onClick="havacc"/>

</android.support.constraint.ConstraintLayout>