<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".register"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="23dp"
        android:background="@color/guru1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rnum" />

    <EditText
        android:id="@+id/rnum"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="@color/guru1"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/log"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_style"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintCircleRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/k_s_rangasamy_college_of_technology"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/k_s_rangasamy_college_of_technology"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aut"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/sup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@color/trans"
        android:onClick="sup"
        android:text="@string/need_a_new_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>